@@ -54,6 +54,7 @@
  52. Yet more questmaker templates: *_delivery3, competitive_protect1, competitive_protect2
  53. Prop_Unsellable has new arguments
  54. New command: NOSELL -- for marking items unsellable
+ 55. New Spell: Shoddy Aura
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
   2. New wainwrighting & smelting recipes
